--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.18.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.1"
+  },
+  "engines": {
+    "node": "16.15.0"
   }
 }
