--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/Yaosaur/LifeCraft#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^7.1.2"
   },
   "engines": {
     "node": "16.15.0"
