--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/Yaosaur/LifeCraft#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "ioredis": "^5.2.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.1",
     "passport": "^0.6.0",
